created basic GET/POST and inputFields view with ui-router

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "angular": "~1.2.16",
-    "angular-route": "~1.2.16"
+    "angular-route": "~1.2.16",
+    "angular-ui-router": "~0.2.10"
   }
 }
