--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.3.0"
+    "express": "^4.3.0",
+    "mysql": "^2.3.0",
+    "knex": "^0.5.14",
+    "bookshelf": "^0.6.10",
+    "body-parser": "^1.2.0",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
