--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.2.0",
     "express": "^4.3.0",
     "mysql": "^2.3.0",
-    "knex": "^0.5.14",
-    "bookshelf": "^0.6.10",
-    "body-parser": "^1.2.0",
+    "sequelize": "^1.7.5",
     "underscore": "^1.6.0"
   },
   "devDependencies": {
