installed underscore (bower); added create new child tag button; edited childrenFeedView.html

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "angular": "~1.2.16",
     "angular-route": "~1.2.16",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "underscore": "~1.6.0"
   }
 }
