--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "sequelize": "^1.7.5",
     "underscore": "^1.6.0",
     "bcrypt": "^0.7.8",
-    "cookie-parser": "^1.1.0"
+    "cookie-parser": "^1.1.0",
+    "q": "^1.0.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
