--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular-route": "~1.2.16",
     "angular-ui-router": "~0.2.10",
     "angular-cookies": "~1.2.16",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "bootstrap": "~3.1.1"
   }
 }
