--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "underscore": "^1.6.0",
     "bcrypt": "^0.7.8",
     "cookie-parser": "^1.1.0",
-    "q": "^1.0.1"
+    "q": "^1.0.1",
+    "nodemailer": "^0.6.5"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
