--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-ui-router": "~0.2.10",
     "angular-cookies": "~1.2.16",
     "underscore": "~1.6.0",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "angular-xeditable": "~0.1.8"
   }
 }
