--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bcrypt": "^0.7.8",
     "cookie-parser": "^1.1.0",
     "q": "^1.0.1",
-    "nodemailer": "^0.6.5"
+    "nodemailer": "^0.6.5",
+    "busboy": "^0.2.6"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
