--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-cookies": "~1.2.16",
     "underscore": "~1.6.0",
     "bootstrap": "~3.1.1",
-    "angular-xeditable": "~0.1.8"
+    "angular-xeditable": "~0.1.8",
+    "ng-file-upload": "~1.4.0"
   }
 }
