--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "mysql": "^2.3.0",
     "sequelize": "^1.7.5",
     "underscore": "^1.6.0",
-    "bcrypt": "^0.7.8",
     "cookie-parser": "^1.1.0",
     "q": "^1.0.1",
     "nodemailer": "^0.6.5",
-    "busboy": "^0.2.6"
+    "busboy": "^0.2.6",
+    "bcrypt-nodejs": "0.0.3",
+    "connect-busboy": "0.0.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
