Reconfigured Server for Azure/ClearDB Deployment

--- a/Web.config
+++ b/Web.config
@@ -10,7 +10,7 @@
       <rules>
         <rule name="no-route">
           <match url="/*" />
-          <action type="Rewrite" url="server.js" /> 
+          <action type="Rewrite" url="server/server.js" /> 
         </rule>
       </rules>
     </rewrite>
