--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
     "nodemailer": "^0.6.5",
     "busboy": "^0.2.6",
     "bcrypt-nodejs": "0.0.3",
-    "connect-busboy": "0.0.1"
+    "connect-busboy": "0.0.1",
+    "grunt": "^0.4.5",
+    "grunt-nodemon": "^0.2.1",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-cssmin": "^0.9.0",
+    "grunt-shell": "^0.7.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -27,7 +35,8 @@
     "grunt-shell": "^0.7.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
